# djangostudy2

./: .gitignore  pyproject.toml
store/: Dockerfile  README.md  db.sqlite3  docker-compose-local.yml  docker-compose.yml  pyproject.toml
store/api/: urls.py  views.py
store/nginx/: nginx.conf
store/nginx/local/: nginx.conf
store/orders/: admin.py  forms.py  models.py  urls.py  views.py
store/orders/migrations/: 0001_initial.py
store/orders/templates/orders/: order-create.html  order.html  orders.html
store/products/: admin.py  context_processors.py  models.py  serializers.py  tests.py  urls.py  views.py
store/products/fixtures/: categories.json  goods.json
store/products/migrations/: 0001_initial.py  0002_basketitem.py  0003_alter_product_options.py  0004_auto_20230829_1138.py  0005_product_stripe_product_price_id.py
store/products/templates/products/: base.html  basket.html  index.html  products.html
store/store/: __init__.py  settings.py  urls.py
store/users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
store/users/migrations/: 0001_initial.py  0002_auto_20230829_1138.py  0003_alter_user_email.py
store/users/templates/users/: email_verification.html  login.html  profile.html  registration.html
