[tool.poetry]
name = "djangostudy2"
version = "0.1.0"
description = ""
authors = ["notStonks <kuzewich.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.13"
pillow = "^9.5.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
psycopg2-binary = "^2.9.7"
django-allauth = "^0.55.2"
django-debug-toolbar = "^4.2.0"
django-redis = "^5.3.0"
celery = { extras = ["redis"], version = "^5.3.4" }
python-dotenv = "^1.0.0"
stripe = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
